--- a/iTaxApp/iTaxApp/iTaxApp.Android/iTaxApp.Android.csproj
+++ b/iTaxApp/iTaxApp/iTaxApp.Android/iTaxApp.Android.csproj
@@ -177,7 +177,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomMap.cs" />
+    <Compile Include="AwaitConfirmationPage.xaml.cs">
+      <DependentUpon>AwaitConfirmationPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="CustomMapRenderer.cs" />
     <Compile Include="ExtrasPage.xaml.cs">
       <DependentUpon>ExtrasPage.xaml</DependentUpon>
     </Compile>
@@ -246,6 +249,11 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="SettingsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="AwaitConfirmationPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
